#101754 - fix footer menu jump on load on tablet

--- a/view/frontend/tailwind/tailwind-source.css
+++ b/view/frontend/tailwind/tailwind-source.css
@@ -4,9 +4,9 @@
     }
 }
 
-[x-cloak="mobile"] {
-    @apply !hidden md:!block;
-  }
+[x-cloak="tablet"] {
+    @apply !hidden lg:!block;
+}
 
 [x-cloak="desktop"] {
     @apply !block lg:!hidden;
